fix: words getting wrapped

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -71,6 +71,7 @@ h3{
 
 
 button, .btn{
+  white-space: nowrap;
   border: unset;
   background: unset;
   overflow: hidden;
